--- a/cmd/hockeypuck/sample-template.conf
+++ b/cmd/hockeypuck/sample-template.conf
@@ -2,6 +2,7 @@
 loglevel="DEBUG"
 indexTemplate="index.html.tmpl"
 vindexTemplate="index.html.tmpl"
+statsTemplate="stats.html.tmpl"
 webroot="../../../pgpkeyserver-lite"
 
 [hockeypuck.hkp]
