Update postgres db name.

--- a/cmd/hockeypuck/sample-postgres.conf
+++ b/cmd/hockeypuck/sample-postgres.conf
@@ -10,5 +10,5 @@ bind=":11371"
 
 [hockeypuck.openpgp.db]
 driver="postgres-jsonb"
-dsn="database=keys host=/var/run/postgresql port=5433 sslmode=disable"
+dsn="database=hkp host=/var/run/postgresql port=5433 sslmode=disable"
 
