Add server contact to settings, stats struct.

--- a/cmd/hockeypuck/sample-peer1.conf
+++ b/cmd/hockeypuck/sample-peer1.conf
@@ -1,6 +1,8 @@
 [hockeypuck]
+statsTemplate="stats.html.tmpl"
 logfile="sample-peer1.log"
 loglevel="DEBUG"
+contact="0x44a2d1db"
 
 [hockeypuck.hkp]
 bind=":11371"
