Provide configurable hostname and system "nodename".

--- a/cmd/hockeypuck/sample-peer1.conf
+++ b/cmd/hockeypuck/sample-peer1.conf
@@ -3,6 +3,7 @@ statsTemplate="stats.html.tmpl"
 logfile="sample-peer1.log"
 loglevel="DEBUG"
 contact="0x44a2d1db"
+hostname="mud"
 
 [hockeypuck.hkp]
 bind=":11371"
