--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,20 @@
+---
 language: go
 
 go:
-    - 1.2
-    - 1.3
-    - 1.4
-    - tip
+  - '1.8'
+  - '1.9'
+  - '1.10'
+  - master
 
+before_script:
+  - go get -t -v ./...
+
+script:
+  - go vet -v ./...
+  - go test -v ./...
+
+matrix:
+  fast_finish: true
+  allow_failures:
+    - go: master
