Store config in SNAP_COMMON.

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -38,6 +38,7 @@ parts:
   hockeypuck:
     build: |-
       cp ../../../snap/*-wrapper $SNAPCRAFT_PART_INSTALL
+      cp ../../../snap/default-config $SNAPCRAFT_PART_INSTALL
       cp -r ../../../snap/templates $SNAPCRAFT_PART_INSTALL
       cp -r ../../../snap/www $SNAPCRAFT_PART_INSTALL
     plugin: godeps
